last changes on the forms

--- a/src/app/updateform/updateform.component.html
+++ b/src/app/updateform/updateform.component.html
@@ -16,8 +16,8 @@
                                     </mat-form-field>
                                 </div>
                             </div>
-                            <div class="col-4">
-                                <mat-form-field>
+                            <div class="col-4 mt-2">
+                                <mat-form-field appearance="fill">
                                     <mat-label>מחלקה</mat-label>
                                     <mat-select formControlName="departmentControl">
                                         <mat-option [value]="">
