--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -11,167 +11,171 @@
                 <h3 class="list-title m-5" style="float: right;">ניהול פניה</h3>
                 <hr>
             </div>
-            <ol class="list-style">
-                <li class="border-me">
-                    <mat-card class="mb-3">
-                        <div class="row">
-                            <div class="col-9 text-right">
-                                <label>תאריך פניה</label>
+            <div class="row">
+                <ol class="list-style">
+                    <li class="border-me">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>תאריך פניה</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field appearance="fill">
+                                    <input matInput [max]="maxDate" formControlName="Comp_Date"
+                                        [matDatepicker]="picker">
+                                    <mat-datepicker-toggle matSuffix [for]="picker" disabled>
+                                    </mat-datepicker-toggle>
+                                    <mat-datepicker #picker></mat-datepicker>
+                                </mat-form-field>
                             </div>
-                            <div class="col-3 text-center">
+                        </mat-card>
+                    </li>
+                    <li class="border-me">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>סוג פניה</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="full-width">
+                                    <mat-select formControlName="Comp_Type" ng-model="myVar">
+                                      <mat-option *ngFor="let type of compTypeList" [value]="type.value">
+                                        {{type.viewValue}}
+                                      </mat-option>
+                                    </mat-select>
+                                  </mat-form-field>
                             </div>
-                            <mat-form-field appearance="fill">
-                                <input matInput [max]="maxDate | date:'yyyy-MM-dd'" formControlName="CompDateControl"
-                                    [matDatepicker]="picker">
-                                <mat-datepicker-toggle matSuffix [for]="picker" disabled>
-                                </mat-datepicker-toggle>
-                                <mat-datepicker #picker></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                    </mat-card>
-                </li>
-                <li class="border-me">
-                    <mat-card class="mb-3">
-                        <div class="row">
-                            <div class="col-9 text-right">
-                                <label>סוג פניה</label>
+                        </mat-card>
+                    </li>
+                    <li class="border-me">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>מקור פניה</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="full-width">
+                                    <mat-select formControlName="Comp_Source" ng-model="myVar">
+                                      <mat-option *ngFor="let related of compSource" [value]="related.value">
+                                        {{related.viewValue}}
+                                      </mat-option>
+                                    </mat-select>
+                                  </mat-form-field>
                             </div>
-                            <div class="col-3 text-center">
+                        </mat-card>
+                    </li>
+                    <li class="border-me">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>סיווג פונה</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="full-width">
+                                    <mat-select formControlName="Comp_Pesron_Relat" ng-model="myVar">
+                                      <mat-option *ngFor="let related of compRelatedPerson" [value]="related.value">
+                                        {{related.viewValue}}
+                                      </mat-option>
+                                    </mat-select>
+                                  </mat-form-field>
                             </div>
-                            <mat-form-field class="full-width">
-                                <mat-select formControlName="CompTypeControl" ng-model="myVar"
-                                  [required]="true">
-                                  <mat-option *ngFor="let type of compTypeList" [value]="type.value">
-                                    {{type.viewValue}}
-                                  </mat-option>
-                                </mat-select>
-                              </mat-form-field>
-                        </div>
-                    </mat-card>
-                </li>
-                <li class="border-me">
-                    <mat-card class="mb-3">
-                        <div class="row">
-                            <div class="col-9 text-right">
-                                <label>מקור פניה</label>
+                        </mat-card>
+                    </li>
+                    <li class="border-me">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>מחלקה</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field appearance="fill">
+                                    <mat-label>מחלקות</mat-label>
+                                    <mat-select formControlName="Comp_Department">
+                                      <mat-option *ngFor="let dept of department" [value]="dept.Depart_Name">
+                                        {{dept.Depart_Name}}
+                                      </mat-option>
+                                    </mat-select>
+                                  </mat-form-field>
                             </div>
-                            <div class="col-3 text-center">
+                        </mat-card>
+                    </li>
+                    <li class="border-me">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>הערה</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="example-full-width">
+                                    <input type="text" matInput formControlName="Comp_Note">
+                                </mat-form-field>
                             </div>
-                            <mat-form-field class="example-full-width">
-
-                                <input type="text" matInput formControlName="CompSourceControl">
-                            </mat-form-field>
-                        </div>
-                    </mat-card>
-                </li>
-                <li class="border-me">
-                    <mat-card class="mb-3">
-                        <div class="row">
-                            <div class="col-9 text-right">
-                                <label>סיווג פונה</label>
+                        </mat-card>
+                    </li>
+                    <li class="border-me">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>תשובה סופית</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="example-full-width">
+                                    <input type="text" matInput formControlName="Comp_Answer">
+                                </mat-form-field>
                             </div>
-                            <div class="col-3 text-center">
+                        </mat-card>
+                    </li>
+                    <li class="border-me">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>תאריך סגירת הפניה</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field appearance="fill">
+                                    <input matInput [max]="maxDate"
+                                        formControlName="Comp_Closing_Date" [matDatepicker]="picker2">
+                                    <mat-datepicker-toggle matSuffix [for]="picker2">
+                                    </mat-datepicker-toggle>
+                                    <mat-datepicker #picker2></mat-datepicker>
+                                </mat-form-field>
                             </div>
-                            <mat-form-field class="full-width">
-                                <mat-select formControlName="CompRelatedControl" ng-model="myVar"
-                                  [required]="true">
-                                  <mat-option *ngFor="let related of compRelatedPerson" [value]="related.value">
-                                    {{related.viewValue}}
-                                  </mat-option>
-                                </mat-select>
-                              </mat-form-field>
-                        </div>
-                    </mat-card>
-                </li>
-                <li class="border-me">
-                    <mat-card class="mb-3">
-                        <div class="row">
-                            <div class="col-9 text-right">
-                                <label>מחלקה</label>
+                        </mat-card>
+                    </li>
+                    <li class="border-me">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>סטטוס</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="full-width">
+                                    <mat-select formControlName="Comp_Status" ng-model="myVar"
+                                      [required]="true">
+                                      <mat-option *ngFor="let status of compStatus" [value]="status.value">
+                                        {{status.viewValue}}
+                                      </mat-option>
+                                    </mat-select>
+                                  </mat-form-field>
                             </div>
-                            <div class="col-3 text-center">
-                            </div>
-                            <mat-form-field appearance="fill">
-                                <mat-label>מחלקות</mat-label>
-                                <mat-select formControlName="CompDepartmentControl">
-                                  <mat-option *ngFor="let dept of department" [value]="dept.Depart_Name">
-                                    {{dept.Depart_Name}}
-                                  </mat-option>
-                                </mat-select>
-                              </mat-form-field>
-                        </div>
-                    </mat-card>
-                </li>
-                <li class="border-me">
-                    <mat-card class="mb-3">
-                        <div class="row">
-                            <div class="col-9 text-right">
-                                <label>הערה</label>
-                            </div>
-                            <div class="col-3 text-center">
-                            </div>
-                            <mat-form-field class="example-full-width">
-                                <input type="text" matInput formControlName="CompNoteControl">
-                            </mat-form-field>
-                        </div>
-                    </mat-card>
-                </li>
-                <li class="border-me">
-                    <mat-card class="mb-3">
-                        <div class="row">
-                            <div class="col-9 text-right">
-                                <label>תשובה סופית</label>
-                            </div>
-                            <div class="col-3 text-center">
-                            </div>
-                            <mat-form-field class="example-full-width">
-                                <input type="text" matInput formControlName="CompAnswerControl">
-                            </mat-form-field>
-                        </div>
-                    </mat-card>
-                </li>
-                <li class="border-me">
-                    <mat-card class="mb-3">
-                        <div class="row">
-                            <div class="col-9 text-right">
-                                <label>תאריך סגירת הפניה</label>
-                            </div>
-                            <div class="col-3 text-center">
-                            </div>
-                            <mat-form-field appearance="fill">
-                                <input matInput [max]="maxDate | date:'yyyy-MM-dd'"
-                                    formControlName="CompClosingDateControl" [matDatepicker]="picker2">
-                                <mat-datepicker-toggle matSuffix [for]="picker2">
-                                </mat-datepicker-toggle>
-                                <mat-datepicker #picker2></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                    </mat-card>
-                </li>
-                <li class="border-me">
-                    <mat-card class="mb-3">
-                        <div class="row">
-                            <div class="col-9 text-right">
-                                <label>סטטוס</label>
-                            </div>
-                            <div class="col-3 text-center">
-                            </div>
-                            <mat-form-field class="full-width">
-                                <mat-select formControlName="CompStatusControl" ng-model="myVar"
-                                  [required]="true">
-                                  <mat-option *ngFor="let status of compStatus" [value]="status.value">
-                                    {{status.viewValue}}
-                                  </mat-option>
-                                </mat-select>
-                              </mat-form-field>
-                        </div>
-                    </mat-card>
-                </li>
-            </ol>
+                        </mat-card>
+                    </li>
+                </ol>
+            </div>
+            
         </div>
         <div class="button-row">
             <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: white;" color="primary"
-                (click)="updateComplaint()" type="submit" mat-raised-button>
+                (click)="fillForm()" type="submit" mat-raised-button>
                 <span>שמירה</span>
             </button>
         </div>
