--- a/src/app/emailsdashboard/emailsdashboard.component.html
+++ b/src/app/emailsdashboard/emailsdashboard.component.html
@@ -8,16 +8,17 @@
                 <div dir="rtl" class="card-body">
                     <form class="form" [formGroup]="formSearch">
                         <div class="row">
-                            <div class="col-8">
+                            <div class="col-6">
                                 <div class="form-group mt-3">
                                     <mat-form-field>
-                                        <input matInput formControlName="searchWord" autocomplete="off" placeholder="חפש לפי שם פונה" name="fliterVal" />
+                                        <input matInput formControlName="compName" autocomplete="off"
+                                            placeholder="חפש לפי שם פונה" name="fliterVal" />
                                     </mat-form-field>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-6">
                                 <mat-form-field appearance="fill">
-                                    <mat-label>מחלקות</mat-label>
+                                    <mat-label>מחלקה</mat-label>
                                     <mat-select formControlName="departmentControl">
                                         <mat-option [value]="">
                                             הכל
@@ -30,29 +31,36 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-8">
-                                <div class="form-group mt-3">
-                                    <mat-form-field>
-                                        <input matInput formControlName="searchWord" autocomplete="off" placeholder="חפש לפי שם פונה" name="fliterVal" />
+                            <div class="col-6">
+                                <div class="form-group">
+                                    <mat-form-field appearance="fill">
+                                        <input matInput [max]="todaysDate" formControlName="compDateControl"
+                                            [matDatepicker]="pickersearch" placeholder="חפש לפי תאריך פנייה">
+                                        <mat-datepicker-toggle matSuffix [for]="pickersearch">
+                                        </mat-datepicker-toggle>
+                                        <mat-datepicker #pickersearch></mat-datepicker>
                                     </mat-form-field>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-6">
                                 <mat-form-field appearance="fill">
-                                    <mat-label>מחלקות</mat-label>
-                                    <mat-select formControlName="departmentControl">
+                                    <mat-label>סטטוס</mat-label>
+                                    <mat-select formControlName="compStatusControl">
                                         <mat-option [value]="">
                                             הכל
                                         </mat-option>
-                                        <mat-option *ngFor="let dept of department" [value]="dept">
-                                            {{dept}}
+                                        <mat-option *ngFor="let dept of compStatus" [value]="dept.value">
+                                            {{dept.viewValue}}
                                         </mat-option>
                                     </mat-select>
                                 </mat-form-field>
                             </div>
                         </div>
-                        <button mat-raised-button type="submit" (click)="searchForm()" class="btn btn-primary btn-raised">
-                            חפש
+                        <button mat-raised-button type="submit" (click)="searchForm()"
+                            class="btn btn-primary btn-raised">
+                            <span class="material-icons">
+                                search
+                            </span>
                         </button>
                     </form>
                 </div>
@@ -91,7 +99,8 @@
             <mat-header-cell *matHeaderCellDef
                 style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך קבלת
                 פניה </mat-header-cell>
-            <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.EmailDateTime | date: "yyyy/dd/MM"}} </mat-cell>
+            <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.EmailDateTime | date:
+                "yyyy/dd/MM"}} </mat-cell>
         </ng-container>
 
         <!-- Update Column -->
@@ -102,18 +111,18 @@
             <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                     color="accent" (click)="openDialogToManageEmail(element.EmailID)"><span class="material-icons">
                         event_note
-                        </span></button> </mat-cell>
+                    </span></button> </mat-cell>
         </ng-container>
 
         <!-- Update Column -->
         <ng-container matColumnDef="showAll">
             <mat-header-cell *matHeaderCellDef
-                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> הצגת סטטוס פניה
+                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> סטטוס פניה
             </mat-header-cell>
             <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                     color="primary" (click)="openDialogToAnsweredForms(element.FormID)"><span class="material-icons">
                         question_answer
-                        </span></button> </mat-cell>
+                    </span></button> </mat-cell>
         </ng-container>
 
 
