--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -1,4 +1,5 @@
-<mat-card>
+
+<mat-card class="form-amen">
 
   <form dir="rtl" [formGroup]="caseNumberForm" autocomplete="off" *ngIf="CaseNumber == ''">
     <mat-card class="full-width text-center">
@@ -12,70 +13,68 @@
   </form>
 
   <form dir="rtl" [formGroup]="surveyForm" (ngSubmit)="onSubmit()" autocomplete="off" *ngIf="CaseNumber != ''">
-    <h2 class="page-title text-center">מילוי שאלון</h2>
+
     <mat-card class="full-width text-center">
       <label>{{_formName}}</label>
     </mat-card>
 
 
-    <div class="survey-options">
+    <div class="survey-options w-100100 float-right">
       <div class="poll-options">
         <div class="row">
-          <h3 class="list-title m-5" style="float: right;">תחילת מילוי שאלות</h3>
+          <h3 class="list-title m-5 text-center">תחילת מילוי שאלות</h3>
           <hr>
         </div>
         <ol formArrayName="Answers" class="list-style">
-          <li class="border-me" *ngFor="let questionCtrl of _questionArr; let i=index">
+          <div class="row">
+          <li class="border-me  " *ngFor="let questionCtrl of _questionArr; let i=index">
             <mat-card [formGroupName]="i" class="mb-3">
               <div class="row">
-                <div class="col-9 text-right">
+                <div class="col-12 text-right">
                   <label>{{questionCtrl.QuestionValue}}</label>
                 </div>
-                <div class="col-3 text-center">
-                </div>
-                <div>
-                  <div *ngIf="questionCtrl.QuestionType == 'RadioButton'">
+
+                <div  class="col-12 text-right">
+                  <div class="d-block" *ngIf="questionCtrl.QuestionType == 'RadioButton'">
                     <mat-radio-group class="example-radio-group" formControlName="answerContent">
-                      <ul class="question-type">
-                        <div *ngFor="let optionCtrl of _optionArr let j = index">
-                          <div *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
+                      
+                        <div  class="d-block"  *ngFor="let optionCtrl of _optionArr let j = index">
+                          <div  class="d-block"  *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
                             <mat-radio-button style="float: right;" value="{{optionCtrl.OptionValue}}">
                               {{optionCtrl.OptionValue}}</mat-radio-button>
                           </div>
                         </div>
                         <mat-error style="float: right;" *ngIf="questionCtrl.QuestionIsRequired == 'True'">שדה חובה!
                         </mat-error>
-                      </ul>
+                      
                     </mat-radio-group>
                   </div>
-                  <div *ngIf="questionCtrl.QuestionType == 'CheckBox'">
+                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'CheckBox'">
                     <mat-radio-group>
-                      <ul class="question-type">
-                        <div>
-                          <div *ngFor="let optionCtrl of _optionArr let k = index">
-                            <div *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
+                      
+                          <div  class="d-block"  *ngFor="let optionCtrl of _optionArr let k = index">
+                            <div  class="d-block"  *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
                               <mat-checkbox class="example-margin" style="float: right;"
                                 (change)="myModel($event,optionCtrl.OptionValue,questionCtrl.QuestionID)">
                                 {{optionCtrl.OptionValue}}</mat-checkbox>
                             </div>
                           </div>
-                        </div>
                         <mat-error style="float: right;" *ngIf="questionCtrl.QuestionIsRequired == 'True'">שדה חובה!
                         </mat-error>
-                      </ul>
+                     
                     </mat-radio-group>
                   </div>
-                  <div *ngIf="questionCtrl.QuestionType == 'Text'">
+                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'Text'">
                     <mat-form-field class="full-width">
                       <input matInput formControlName="answerContent" type="text" placeholder="תשובה">
                     </mat-form-field>
                   </div>
-                  <div *ngIf="questionCtrl.QuestionType == 'TextArea'">
+                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'TextArea'">
                     <mat-form-field class="full-width">
                       <input matInput formControlName="answerContent" type="text" max="300" placeholder="תשובה">
                     </mat-form-field>
                   </div>
-                  <div *ngIf="questionCtrl.QuestionType == 'Date'">
+                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'Date'">
                     <mat-form-field appearance="fill">
                       <mat-label>אפשרות תאריך</mat-label>
                       <input matInput [max]="maxDate | date:'yyyy-MM-dd'" formControlName="answerContent"
@@ -85,17 +84,23 @@
                       <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
                   </div>
-                  <div *ngIf="questionCtrl.QuestionType == 'Email'">
+                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'Time'">
+                    <mat-form-field>
+                      <input matInput [ngxTimepicker]="endTime" [format]="24"  placeholder="00:00" formControlName="answerContent"/>
+                    </mat-form-field>
+                    <ngx-material-timepicker #endTime></ngx-material-timepicker>
+                  </div>
+                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'Email'">
                     <mat-form-field class="full-width">
                       <input formControlName="answerContent" matInput type="email" placeholder="אימייל">
                     </mat-form-field>
                   </div>
-                  <div *ngIf="questionCtrl.QuestionType == 'Phone'">
+                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'Phone'">
                     <mat-form-field class="full-width">
                       <input formControlName="answerContent" matInput placeholder="מספר טלפון">
                     </mat-form-field>
                   </div>
-                  <div *ngIf="questionCtrl.QuestionType == 'ID'">
+                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'ID'">
                     <mat-form-field class="full-width">
                       <input formControlName="answerContent" matInput placeholder="תעודת זהות">
                     </mat-form-field>
@@ -104,6 +109,7 @@
               </div>
             </mat-card>
           </li>
+        </div>
         </ol>
       </div>
     </div>
