--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -1,7 +1,7 @@
-<mat-card>
+<mat-card class="d-block full-width">
 
   <form dir="rtl" [formGroup]="caseNumberForm" autocomplete="off" *ngIf="CaseNumber == ''">
-    <mat-card class="full-width text-center">
+    <mat-card class="full-width d-block  text-center">
       <mat-form-field class="full-width">
         <input formControlName="CaseNumber" matInput placeholder="מספר מקרה">
       </mat-form-field>
@@ -26,7 +26,8 @@
         </div>
         <ol formArrayName="Answers" class="list-style">
           <li class="border-me" *ngFor="let questionCtrl of _questionArr; let i=index">
-            <mat-card [formGroupName]="i" class="mb-3">
+            <mat-card [formGroupName]="i" class="d-block full-width mb-3 rel">
+              <span class="pos-me-right">{{i+1}}.&nbsp;&nbsp;</span>
               <div class="row">
                 <div class="col-9 text-right">
                   <label>{{questionCtrl.QuestionValue}}</label>
