--- a/src/styles.css
+++ b/src/styles.css
@@ -15,9 +15,9 @@ footer {
 .mat-dialog-container{
     height: auto !important;
 }
-.cdk-overlay-pane{
+/* .cdk-overlay-pane:not(.mat-datepicker-popup){
     width: 90%;;
-}
+} */
 .google-chart {
     width: 100% !important;
     height: 600px !important;
@@ -1259,8 +1259,14 @@ ngx-material-timepicker-container,
     z-index: 9999;
     padding-bottom: 55px;
 }
+.mat-card.mat-focus-indicator{
+    padding-bottom: 90px;;
+}
 footer {
     z-index: 999;
+}
+.bg-blue-light1 {
+    padding-bottom: 90px;;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
