--- a/src/app/form-dashboard/form-dashboard.component.html
+++ b/src/app/form-dashboard/form-dashboard.component.html
@@ -11,7 +11,7 @@
                                 <div class="col-12">
                                     <div class="form-group">
                                         <mat-form-field>
-                                            <input matInput formControlName="searchWord" autocomplete="off" placeholder="חפש לפי שם מחלקה" name="fliterVal" />
+                                            <input matInput formControlName="departmentControl" autocomplete="off" placeholder="חפש לפי שם מחלקה" name="fliterVal" />
                                         </mat-form-field>
                                     </div>
                                 </div>
