--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="row">
                 <ol class="list-style">
-                    <li class="border-me">
+                    <li class="border-me col-12">
                         <mat-card class="mb-3">
                             <div class="row">
                                 <div class="col-9 text-right">
@@ -31,7 +31,7 @@
                             </div>
                         </mat-card>
                     </li>
-                    <li class="border-me">
+                    <li class="border-me col-12">
                         <mat-card class="mb-3">
                             <div class="row">
                                 <div class="col-9 text-right">
@@ -41,15 +41,15 @@
                                 </div>
                                 <mat-form-field class="full-width">
                                     <mat-select formControlName="Comp_Type" ng-model="myVar">
-                                      <mat-option *ngFor="let type of compTypeList" [value]="type.value">
-                                        {{type.viewValue}}
-                                      </mat-option>
+                                        <mat-option *ngFor="let type of compTypeList" [value]="type.value">
+                                            {{type.viewValue}}
+                                        </mat-option>
                                     </mat-select>
-                                  </mat-form-field>
+                                </mat-form-field>
                             </div>
                         </mat-card>
                     </li>
-                    <li class="border-me">
+                    <li class="border-me col-12">
                         <mat-card class="mb-3">
                             <div class="row">
                                 <div class="col-9 text-right">
@@ -59,15 +59,71 @@
                                 </div>
                                 <mat-form-field class="full-width">
                                     <mat-select formControlName="Comp_Source" ng-model="myVar">
-                                      <mat-option *ngFor="let related of compSource" [value]="related.value">
-                                        {{related.viewValue}}
-                                      </mat-option>
+                                        <mat-option *ngFor="let related of compSource" [value]="related.value">
+                                            {{related.viewValue}}
+                                        </mat-option>
                                     </mat-select>
-                                  </mat-form-field>
+                                </mat-form-field>
                             </div>
                         </mat-card>
                     </li>
-                    <li class="border-me">
+                    <li class="border-me col-12">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>תעודת זהות</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="example-full-width">
+                                    <input type="text" matInput formControlName="PersonID">
+                                </mat-form-field>
+                            </div>
+                        </mat-card>
+                    </li>
+                    <li class="border-me col-12">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>עובד מחלקה</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="example-full-width">
+                                    <input type="text" matInput formControlName="RelevantEmployee1">
+                                </mat-form-field>
+                            </div>
+                        </mat-card>
+                    </li>
+                    <li class="border-me col-12">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>אמבולטורי</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="example-full-width">
+                                    <input type="text" matInput formControlName="Ambolatory">
+                                </mat-form-field>
+                            </div>
+                        </mat-card>
+                    </li>
+                    <li class="border-me col-12">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>אשפוז</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="example-full-width">
+                                    <input type="text" matInput formControlName="Eshpoz">
+                                </mat-form-field>
+                            </div>
+                        </mat-card>
+                    </li>
+                    <li class="border-me col-12">
                         <mat-card class="mb-3">
                             <div class="row">
                                 <div class="col-9 text-right">
@@ -77,15 +133,15 @@
                                 </div>
                                 <mat-form-field class="full-width">
                                     <mat-select formControlName="Comp_Pesron_Relat" ng-model="myVar">
-                                      <mat-option *ngFor="let related of compRelatedPerson" [value]="related.value">
-                                        {{related.viewValue}}
-                                      </mat-option>
+                                        <mat-option *ngFor="let related of compRelatedPerson" [value]="related.value">
+                                            {{related.viewValue}}
+                                        </mat-option>
                                     </mat-select>
-                                  </mat-form-field>
+                                </mat-form-field>
                             </div>
                         </mat-card>
                     </li>
-                    <li class="border-me">
+                    <li class="border-me col-12">
                         <mat-card class="mb-3">
                             <div class="row">
                                 <div class="col-9 text-right">
@@ -96,15 +152,33 @@
                                 <mat-form-field appearance="fill">
                                     <mat-label>מחלקות</mat-label>
                                     <mat-select formControlName="Comp_Department">
-                                      <mat-option *ngFor="let dept of department" [value]="dept.Depart_Name">
-                                        {{dept.Depart_Name}}
-                                      </mat-option>
+                                        <mat-option *ngFor="let dept of department" [value]="dept.Depart_Name">
+                                            {{dept.Depart_Name}}
+                                        </mat-option>
                                     </mat-select>
-                                  </mat-form-field>
+                                </mat-form-field>
                             </div>
                         </mat-card>
                     </li>
-                    <li class="border-me">
+                    <li class="border-me col-12">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>סקטור</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="full-width">
+                                    <mat-select formControlName="Comp_Sektor" ng-model="myVar">
+                                        <mat-option *ngFor="let sektor of compSektor" [value]="sektor.value">
+                                            {{sektor.viewValue}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                        </mat-card>
+                    </li>
+                    <li class="border-me col-12">
                         <mat-card class="mb-3">
                             <div class="row">
                                 <div class="col-9 text-right">
@@ -118,7 +192,7 @@
                             </div>
                         </mat-card>
                     </li>
-                    <li class="border-me">
+                    <li class="border-me col-12">
                         <mat-card class="mb-3">
                             <div class="row">
                                 <div class="col-9 text-right">
@@ -132,7 +206,21 @@
                             </div>
                         </mat-card>
                     </li>
-                    <li class="border-me">
+                    <li class="border-me col-12">
+                        <mat-card class="mb-3">
+                            <div class="row">
+                                <div class="col-9 text-right">
+                                    <label>תגובה לשיפור</label>
+                                </div>
+                                <div class="col-3 text-center">
+                                </div>
+                                <mat-form-field class="example-full-width">
+                                    <input type="text" matInput formControlName="ImprovementNote">
+                                </mat-form-field>
+                            </div>
+                        </mat-card>
+                    </li>
+                    <li class="border-me col-12">
                         <mat-card class="mb-3">
                             <div class="row">
                                 <div class="col-9 text-right">
@@ -141,8 +229,8 @@
                                 <div class="col-3 text-center">
                                 </div>
                                 <mat-form-field appearance="fill">
-                                    <input matInput [max]="maxDate"
-                                        formControlName="Comp_Closing_Date" [matDatepicker]="picker2">
+                                    <input matInput [max]="maxDate" formControlName="Comp_Closing_Date"
+                                        [matDatepicker]="picker2">
                                     <mat-datepicker-toggle matSuffix [for]="picker2">
                                     </mat-datepicker-toggle>
                                     <mat-datepicker #picker2></mat-datepicker>
@@ -150,7 +238,7 @@
                             </div>
                         </mat-card>
                     </li>
-                    <li class="border-me">
+                    <li class="border-me col-12">
                         <mat-card class="mb-3">
                             <div class="row">
                                 <div class="col-9 text-right">
@@ -159,19 +247,18 @@
                                 <div class="col-3 text-center">
                                 </div>
                                 <mat-form-field class="full-width">
-                                    <mat-select formControlName="Comp_Status" ng-model="myVar"
-                                      [required]="true">
-                                      <mat-option *ngFor="let status of compStatus" [value]="status.value">
-                                        {{status.viewValue}}
-                                      </mat-option>
+                                    <mat-select formControlName="Comp_Status" ng-model="myVar" [required]="true">
+                                        <mat-option *ngFor="let status of compStatus" [value]="status.value">
+                                            {{status.viewValue}}
+                                        </mat-option>
                                     </mat-select>
-                                  </mat-form-field>
+                                </mat-form-field>
                             </div>
                         </mat-card>
                     </li>
                 </ol>
             </div>
-            
+
         </div>
         <div class="button-row">
             <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: white;" color="primary"
