--- a/src/app/emailsdashboard/emailsdashboard.component.html
+++ b/src/app/emailsdashboard/emailsdashboard.component.html
@@ -129,7 +129,7 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
-    <!-- <button (click)="openDialogToUpdate(0)" type="button" id="rolesDetailsBtn" mat-fab color="primary"><i
-            class="material-icons">add</i></button> -->
+    <button (click)="openDialogToManageEmail(0)" type="button" id="rolesDetailsBtn" mat-fab color="primary"><i
+            class="material-icons">add</i></button>
     <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
 </div>
