--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -256,7 +256,7 @@
                 </mat-accordion>
             </li>
 
-            <li class="nav-item" *ngIf="!_shoSofiMenu">
+            <li class="nav-item">
                 <mat-accordion>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
@@ -270,7 +270,7 @@
                                 >
                             </li>
 
-                            <li class="nav-item">
+                            <li class="nav-item" *ngIf="_formsArea">
                                 <a class="nav-link" routerLink="digitalforms"
                                     >ניהול שאלונים</a
                                 >
@@ -279,7 +279,7 @@
                     </mat-expansion-panel>
                 </mat-accordion>
             </li>
-            <li class="nav-item" *ngIf="!_shoSofiMenu">
+            <li class="nav-item" *ngIf="_publicInquiry">
                 <mat-accordion>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
