--- a/src/app/updateform/updateform.component.css
+++ b/src/app/updateform/updateform.component.css
@@ -1,10 +1,14 @@
-table {
+/* table {
   width: 100%;
-}
+} */
 
 #rolesDetailsBtn{
   position: fixed;
   bottom: 100px;
   left: 100px;
   z-index: 10;
+}
+
+mat-table { 
+  width: 100%; 
 }
