--- a/src/app/updateform/updateform.component.html
+++ b/src/app/updateform/updateform.component.html
@@ -3,41 +3,36 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col">
-            <div dir="rtl" class="card w-85-p">
-                <div dir="rtl" class="card-body">
-                    <form class="form" [formGroup]="formSearch">
-                        <div class="row">
-                            <div class="col-8">
-                                <div class="form-group mt-3">
-                                    <mat-form-field>
-                                        <input matInput formControlName="searchWord" autocomplete="off"
-                                            placeholder="חפש לפי שם שאלון" name="fliterVal" />
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="col-4 mt-2">
-                                <mat-form-field appearance="fill">
-                                    <mat-label>מחלקה</mat-label>
-                                    <mat-select formControlName="departmentControl">
-                                        <mat-option [value]="">
-                                            הכל
-                                        </mat-option>
-                                        <mat-option *ngFor="let dept of department" [value]="dept">
-                                            {{dept}}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                            </div>
+        <div dir="rtl" class="card w-85-p">
+            <div class="card-body">
+                <form class="form" [formGroup]="formSearch">
+                    <div class="row">
+                        <div class="form-group mt-3 col-lg-8 col-sm-12 col-xs-12">
+                            <mat-form-field>
+                                <input matInput formControlName="searchWord" autocomplete="off"
+                                    placeholder="חפש לפי שם שאלון" name="fliterVal" />
+                            </mat-form-field>
                         </div>
-                        <button mat-raised-button type="submit" (click)="searchForm()"
-                            class="btn btn-primary btn-raised">
-                            <span class="material-icons">
-                                search
-                            </span>
-                        </button>
-                    </form>
-                </div>
+                        <div class="form-group mt-2 col-lg-4 col-sm-12">
+                            <mat-form-field appearance="fill">
+                                <mat-label>מחלקה</mat-label>
+                                <mat-select formControlName="departmentControl">
+                                    <mat-option [value]="">
+                                        הכל
+                                    </mat-option>
+                                    <mat-option *ngFor="let dept of department" [value]="dept">
+                                        {{dept}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <button mat-raised-button type="submit" (click)="searchForm()" class="btn btn-primary btn-raised">
+                        <span class="material-icons">
+                            search
+                        </span>
+                    </button>
+                </form>
             </div>
         </div>
     </div>
