--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -101,11 +101,11 @@
                         </mat-expansion-panel-header>
                         <ul>
                             
-                            <!-- <li class="nav-item" *ngIf="_shoEmergincyCall">
+                           <li class="nav-item" *ngIf="_shoEmergincyCall">
                                 <a class="nav-link" routerLink="eventsschedule"
                                     >יומן אירועים</a
                                 >
-                            </li> -->
+                            </li>
                             <li class="nav-item" *ngIf="_shoEmergincyCall">
                                 <a class="nav-link" routerLink="emergencycallgroups"
                                     >אזעקת חירום</a
