--- a/src/app/mersham/mersham.component.html
+++ b/src/app/mersham/mersham.component.html
@@ -1125,6 +1125,7 @@
                             <mat-form-field floatLabel="always">
                                 <input
                                     matInput
+                                    dir="ltr"
                                     id="courseNum"
                                     autocomplete="off"
                                     class="form-control"
@@ -2173,7 +2174,7 @@
                 <div class="col">
                     <div class="form-group">
                         <label>קורס מס'</label>
-                        <span class="form-control">{{
+                        <span dir="ltr" class="form-control">{{
                             printForm.courseNumVal
                         }}</span>
                     </div>
