--- a/src/app/eventsschedule/eventsschedule.component.html
+++ b/src/app/eventsschedule/eventsschedule.component.html
@@ -7,7 +7,7 @@
                     <div dir="rtl" class="card-body">
                         <form class="form">
                             <div class="row">
-                                <div class="col">
+                                <div class="col-12">
                                     <div class="form-group">
                                         <mat-form-field>
                                             <input
@@ -27,10 +27,11 @@
                                             <mat-select
                                                 name="DeskID"
                                                 [(value)]="DeskID"
+                                                
                                             >
                                                 <mat-option
                                                     
-                                                    [value]=""
+                                                    [value]="-1"
                                                     >הכל</mat-option
                                                 >
                                                 <mat-option
@@ -52,7 +53,7 @@
                                             >
                                             <mat-option
                                                     
-                                                    [value]=""
+                                                    [value]="-1"
                                                     >הכל</mat-option
                                                 >
                                                 <mat-option
@@ -74,7 +75,7 @@
                                             >
                                             <mat-option
                                                     
-                                                    [value]=""
+                                                    [value]="-1"
                                                     >הכל</mat-option
                                                 >
                                                 <mat-option
@@ -96,7 +97,7 @@
                                         >
                                         <mat-option
                                                     
-                                                    [value]=""
+                                                    [value]="-1"
                                                     >הכל</mat-option
                                                 >
                                             <mat-option
@@ -307,13 +308,13 @@
                         </table>
                     </div>
                     <!-- PAGINATION -->
-                    <!-- <mat-paginator
+                    <mat-paginator
                         [length]="resultsLength"
-                        [pageSizeOptions]="[5, 10, 20, 50, 100]"
-                        [pageSize]="10"
+                        [pageSizeOptions]="[ 20, 50, 100]"
+                        [pageSize]="50"
                         showFirstLastButtons
                         (page)="getPaginatorData($event)"
-                    ></mat-paginator> -->
+                    ></mat-paginator>
                 </div>
             </div>
         </div>
@@ -352,18 +353,32 @@
         </div>
         <div class="modal-body">
             <div class="row">
-                <div class="col">
+                <div class="col-7">
                     <div class="form-group">
                         <mat-form-field>
                             <input
                                 matInput
-                                autocomplete="off"
+                                autocomplete="off" 
                                 class="form-control"
                                 placeholder="כותרת"
                                 formControlName="EventName"                                
                                 type="text"
                             />
                         </mat-form-field>
+                    </div>
+                </div>
+                <div class="col-5">
+                    <div class="form-group">
+                        <mat-form-field>
+                            <input matInput [ngxMatDatetimePicker]="picker" placeholder="תאריך ושעת" (focus)="picker.open()" formControlName="EventDateTime"
+                                  >
+                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                            <ngx-mat-datetime-picker #picker [showSpinners]="true" [showSeconds]="false"
+                               [stepHour]="true" [stepMinute]="true" [stepSecond]="false"
+                               [touchUi]="ifMobile"   [enableMeridian]="false" 
+                               [disableMinute]="false" [hideTime]="false">
+                            </ngx-mat-datetime-picker>
+                         </mat-form-field>
                     </div>
                 </div>                
                 <div class="col">
@@ -437,26 +452,14 @@
                            
             </div>
             <div class="row">
-                <div class="col">
-                    <div class="form-group">
-                        <mat-form-field>
-                            <input matInput [ngxMatDatetimePicker]="picker" placeholder="תאריך ושעת" (focus)="picker.open()" formControlName="EventDateTime"
-                                  >
-                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                            <ngx-mat-datetime-picker #picker [showSpinners]="true" [showSeconds]="false"
-                               [stepHour]="true" [stepMinute]="true" [stepSecond]="false"
-                               [touchUi]="ifMobile"   [enableMeridian]="false" 
-                               [disableMinute]="false" [hideTime]="false">
-                            </ngx-mat-datetime-picker>
-                         </mat-form-field>
-                    </div>
-                </div>
-                <div class="col">
+               
+                <div class="col-12">
                     <div class="form-group">
                         <mat-form-field>
                             <mat-label>הערות</mat-label>
                             <textarea
                                 matInput
+                                rows="20"
                                 class="form-control"
                                 formControlName="EventNote"                                
                             ></textarea>
