--- a/src/app/emergencycallgroups/emergencycallgroups.component.css
+++ b/src/app/emergencycallgroups/emergencycallgroups.component.css
@@ -5,6 +5,12 @@
     left: 43px;
     z-index: 10;
 }
+#GroupSmsBtn{
+    position: fixed;
+    bottom: 43px;
+    left: 123px;
+    z-index: 10;
+}
 .group-border{
     border-top: 3px solid #341d5c;
     padding-top: 20px;;
