--- a/src/app/sendsmsadmin/sendsmsadmin.component.html
+++ b/src/app/sendsmsadmin/sendsmsadmin.component.html
@@ -1,6 +1,20 @@
 <div id="page-toshow">
     <h1 *ngIf="toShow=='true'" class="page-title text-center">שליחת הודעות הנהלה</h1>
     <div class="container-fluid">
+        <div *ngIf="emergencyCall" class="row" dir="rtl">
+            <div class="col-2"></div>
+            <div  class="col-8">
+                <div class="row text-center"> 
+                    <div *ngFor="let messageTemp of MessagesTemp" class="col-3">
+                        <button  (click)="SetMessageVal(messageTemp.MessageVal)" mat-raised-button color="primary">{{messageTemp.Title}}</button>         
+                    </div>
+                </div>
+                
+            </div>
+            <div class="col-2"></div>
+            
+        </div>
+        <br>
         <div class="row">
             <div class="col">
                 <div dir="rtl" class="card w-85-p">
