--- a/src/app/updatesingleform/updatesingleform.component.css
+++ b/src/app/updatesingleform/updatesingleform.component.css
@@ -12,13 +12,9 @@ ol{
 ul{
     list-style-type: none;
 }
-
-/* ol > li {
-    width: calc( 50% - 30px);
-    margin: 0 15px;
-    float: right;
-} */
-
+.mat-dialog-container{
+    padding: 0px;
+}
 .mat-form-field {
     margin-right: 8px;
   }
