--- a/src/app/emailsdashboard/emailsdashboard.component.html
+++ b/src/app/emailsdashboard/emailsdashboard.component.html
@@ -109,8 +109,18 @@
                 style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> ניהול פניה
             </mat-header-cell>
             <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
-                    color="accent" (click)="openDialogToManageEmail(element.EmailID)"><span class="material-icons">
+                    color="accent" (click)="openDialogToManageEmail(element.EmailID,1)"><span class="material-icons">
                         event_note
+                    </span></button> </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="add">
+            <mat-header-cell *matHeaderCellDef
+                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> פיצול פניה
+            </mat-header-cell>
+            <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
+                    color="accent" (click)="openDialogToManageEmail(element.EmailID,0)"><span class="material-icons">
+                        add
                     </span></button> </mat-cell>
         </ng-container>
 
@@ -129,7 +139,7 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
-    <button (click)="openDialogToManageEmail(0)" type="button" id="rolesDetailsBtn" mat-fab color="primary"><i
-            class="material-icons">add</i></button>
+    <button (click)="openDialogToManageEmail(0,0)" type="button" id="rolesDetailsBtn" mat-fab color="primary"><i
+        class="material-icons">add</i></button>
     <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
 </div>
