--- a/src/app/fill-survey/fill-survey.component.css
+++ b/src/app/fill-survey/fill-survey.component.css
@@ -22,11 +22,7 @@
     width: 100%;
     float: right;
 }
-/* 
-ol li {
-    margin: 0 15px;
-    float: right;
-} */
+
 .pos-me-number-li{
     position: absolute;
     right: -20px;
@@ -37,4 +33,8 @@ ol li {
 
 .mat-card.mat-focus-indicator {
     padding-bottom: 0px;
+}
+
+form{
+    padding-left: 0px;
 }
