--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -1,7 +1,9 @@
 
 <mat-card class="form-amen">
-
-  <form dir="rtl" [formGroup]="caseNumberForm" autocomplete="off" *ngIf="CaseNumber == ''">
+  <form dir="rtl" [formGroup]="caseNumberForm" autocomplete="off" *ngIf="withCaseNumber">
+    <zxing-scanner [torch]="torchEnabled" [device]="deviceCurrent" (deviceChange)="onDeviceChange($event)" (scanSuccess)="onCodeResult($event)"
+    [formats]="formatsEnabled" [tryHarder]="tryHarder" (permissionResponse)="onHasPermission($event)"
+    (camerasFound)="onCamerasFound($event)" (torchCompatible)="onTorchCompatible($event)"></zxing-scanner>
       <mat-form-field class="full-width">
         <input formControlName="CaseNumber" matInput placeholder="מספר מקרה">
       </mat-form-field>
@@ -10,12 +12,11 @@
       </button>
   </form>
 
-  <form dir="rtl" [formGroup]="surveyForm" (ngSubmit)="onSubmit()" autocomplete="off" *ngIf="CaseNumber != ''">
+  <form dir="rtl" [formGroup]="surveyForm" (ngSubmit)="onSubmit()" autocomplete="off" *ngIf="!withCaseNumber">
 
     <mat-card class="full-width text-center">
       <label>{{_formName}}</label>
     </mat-card>
-
 
     <div class="survey-options w-100100 float-right">
       <div class="poll-options">
