--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -1,15 +1,17 @@
-
 <mat-card class="form-amen">
   <form dir="rtl" [formGroup]="caseNumberForm" autocomplete="off" *ngIf="withCaseNumber">
-    <zxing-scanner [torch]="torchEnabled" [device]="deviceCurrent" (deviceChange)="onDeviceChange($event)" (scanSuccess)="onCodeResult($event)"
+    <!-- <zxing-scanner [torch]="torchEnabled" [device]="deviceCurrent" (deviceChange)="onDeviceChange($event)" (scanSuccess)="onCodeResult($event)"
     [formats]="formatsEnabled" [tryHarder]="tryHarder" (permissionResponse)="onHasPermission($event)"
-    (camerasFound)="onCamerasFound($event)" (torchCompatible)="onTorchCompatible($event)"></zxing-scanner>
-      <mat-form-field class="full-width">
-        <input formControlName="CaseNumber" matInput placeholder="מספר מקרה">
-      </mat-form-field>
-      <button mat-raised-button type="submit" (click)="searchCaseNumber()" class="btn btn-primary btn-raised mb-2">
-        חפש
-      </button>
+    (camerasFound)="onCamerasFound($event)" (torchCompatible)="onTorchCompatible($event)"></zxing-scanner> -->
+    <mat-form-field class="full-width">
+      <input formControlName="CaseNumber" matInput placeholder="מספר מקרה">
+    </mat-form-field>
+    <button mat-raised-button type="submit" (click)="searchCaseNumber()" class="btn btn-secondary btn-raised mb-2 ml-2" style="float: right;">
+      ערוך
+    </button>
+    <button mat-raised-button type="submit" (click)="searchCaseNumber()" class="btn btn-primary btn-raised mb-2">
+      התחל
+    </button>
   </form>
 
   <form dir="rtl" [formGroup]="surveyForm" (ngSubmit)="onSubmit()" autocomplete="off" *ngIf="!withCaseNumber">
@@ -26,91 +28,91 @@
         </div>
         <ol formArrayName="Answers" class="list-style">
           <div class="row">
-          <li class="col-lg-6 col-sm-12 col-xs-12" *ngFor="let questionCtrl of _questionArr; let i=index">
-            <mat-card [formGroupName]="i" class="mb-3 rel">
-              <span class="pos-me-number-li">{{ i + 1}}. </span>
-              <div class="row">
-                <div class="col-12 text-right">
-                  <label>{{questionCtrl.QuestionValue}}</label>
-                </div>
+            <li class="col-lg-6 col-sm-12 col-xs-12" *ngFor="let questionCtrl of _questionArr; let i=index">
+              <mat-card [formGroupName]="i" class="mb-3 rel">
+                <span class="pos-me-number-li">{{ i + 1}}. </span>
+                <div class="row">
+                  <div class="col-12 text-right">
+                    <label>{{questionCtrl.QuestionValue}}</label>
+                  </div>
 
-                <div  class="col-12 text-right">
-                  <div class="d-block" *ngIf="questionCtrl.QuestionType == 'RadioButton'">
-                    <mat-radio-group class="example-radio-group" formControlName="answerContent">
-                      
-                        <div  class="d-block"  *ngFor="let optionCtrl of _optionArr let j = index">
-                          <div  class="d-block"  *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
+                  <div class="col-12 text-right">
+                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'RadioButton'">
+                      <mat-radio-group class="example-radio-group" formControlName="answerContent">
+
+                        <div class="d-block" *ngFor="let optionCtrl of _optionArr let j = index">
+                          <div class="d-block" *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
                             <mat-radio-button style="float: right;" value="{{optionCtrl.OptionValue}}">
                               {{optionCtrl.OptionValue}}</mat-radio-button>
                           </div>
                         </div>
-                        <mat-error style="float: right;" *ngIf="questionCtrl.QuestionIsRequired == 'True'">שדה חובה!
-                        </mat-error>
-                      
-                    </mat-radio-group>
-                  </div>
-                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'CheckBox'">
-                    <mat-radio-group>
-                          <div  class="d-block"  *ngFor="let optionCtrl of _optionArr let k = index">
-                            <div  class="d-block"  *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
-                              <mat-checkbox class="example-margin" style="float: right;" formControlName="answerContent"
-                                (change)="myModel($event,optionCtrl.OptionValue,questionCtrl.QuestionID)">
-                                {{optionCtrl.OptionValue}}</mat-checkbox>
-                            </div>
+                      </mat-radio-group>
+                    </div>
+                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'CheckBox'">
+                      <mat-radio-group>
+                        <div class="d-block" *ngFor="let optionCtrl of _optionArr let k = index">
+                          <div class="d-block" *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
+                            <mat-checkbox class="example-margin" style="float: right;" formControlName="answerContent"
+                              (change)="myModel($event,optionCtrl.OptionValue,questionCtrl.QuestionID)">
+                              {{optionCtrl.OptionValue}}</mat-checkbox>
                           </div>
-                        <mat-error style="float: right;" *ngIf="questionCtrl.QuestionIsRequired == 'True'">שדה חובה!
-                        </mat-error>
-                    </mat-radio-group>
-                  </div>
-                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'Text'">
-                    <mat-form-field class="full-width">
-                      <input matInput formControlName="answerContent" type="text">
-                    </mat-form-field>
-                  </div>
-                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'TextArea'">
-                    <mat-form-field class="full-width">
-                      <input matInput formControlName="answerContent" type="text" max="300">
-                    </mat-form-field>
-                  </div>
-                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'Date'">
-                    <mat-form-field appearance="fill">
-                      <mat-label>אפשרות תאריך</mat-label>
-                      <input matInput [max]="maxDate | date:'yyyy-MM-dd'" formControlName="answerContent"
-                        [matDatepicker]="picker">
-                      
-                    </mat-form-field>
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        </div>
+                      </mat-radio-group>
+                    </div>
+                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'Text'">
+                      <mat-form-field class="full-width">
+                        <input matInput formControlName="answerContent" type="text">
+                      </mat-form-field>
+                    </div>
+                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'TextArea'">
+                      <mat-form-field class="full-width">
+                        <input matInput formControlName="answerContent" type="text" max="300">
+                      </mat-form-field>
+                    </div>
+                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'Date'">
+                      <mat-form-field appearance="fill">
+                        <mat-label>אפשרות תאריך</mat-label>
+                        <input matInput [max]="maxDate | date:'yyyy-MM-dd'" formControlName="answerContent"
+                          [matDatepicker]="picker">
+
+                      </mat-form-field>
+                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                       <mat-datepicker #picker></mat-datepicker>
-                  </div>
-                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'Time'">
-                    <mat-form-field>
-                      <input matInput [ngxTimepicker]="endTime" [format]="24" formControlName="answerContent"/>
-                    </mat-form-field>
-                    <ngx-material-timepicker #endTime></ngx-material-timepicker>
-                  </div>
-                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'Email'">
-                    <mat-form-field class="full-width">
-                      <input formControlName="answerContent" matInput type="email">
-                    </mat-form-field>
-                  </div>
-                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'Phone'">
-                    <mat-form-field class="full-width">
-                      <input formControlName="answerContent" matInput>
-                    </mat-form-field>
-                  </div>
-                  <div  class="d-block" *ngIf="questionCtrl.QuestionType == 'ID'">
-                    <mat-form-field class="full-width">
-                      <input formControlName="answerContent" matInput>
-                    </mat-form-field>
+                    </div>
+                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'Time'">
+                      <mat-form-field>
+                        <input matInput [ngxTimepicker]="endTime" [format]="24" formControlName="answerContent" />
+                      </mat-form-field>
+                      <ngx-material-timepicker #endTime></ngx-material-timepicker>
+                    </div>
+                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'Email'">
+                      <mat-form-field class="full-width">
+                        <input formControlName="answerContent" matInput type="email">
+                      </mat-form-field>
+                    </div>
+                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'Phone'">
+                      <mat-form-field class="full-width">
+                        <input formControlName="answerContent" matInput>
+                      </mat-form-field>
+                    </div>
+                    <div class="d-block" *ngIf="questionCtrl.QuestionType == 'ID'">
+                      <mat-form-field class="full-width">
+                        <input formControlName="answerContent" matInput>
+                      </mat-form-field>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </mat-card>
-          </li>
-        </div>
+              </mat-card>
+            </li>
+          </div>
         </ol>
       </div>
     </div>
+    <div class="full-width mb-2">
+      <div class="row">חתימה</div>
+      <canvas class="row" #canvas></canvas>
+    </div>
+   
     <div class="button-row">
       <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: white;" color="primary"
         type="submit" mat-raised-button>
@@ -118,9 +120,4 @@
       </button>
     </div>
   </form>
-  <!-- <div class="button-row">
-    <button class="full-width mb-5" style="background-color: red;font-size: 20px;font-weight: bold;color: white;" (click)="cancelReturn()" type="submit" mat-raised-button>
-      <span>ביטול וחזרה לרשימה</span>
-    </button>
-  </div> -->
 </mat-card>
