--- a/src/app/formsanswered/formsanswered.component.html
+++ b/src/app/formsanswered/formsanswered.component.html
@@ -6,14 +6,22 @@
         <div class="row">
             <div class="col">
                 <div dir="rtl" class="card w-85-p">
-                    <div dir="rtl" class="card-body">
-                        <form class="form" [formGroup]="formSearch">
+                    <div dir="rtl" class="card-body" style="margin: auto;">
+                        <form class="form" [formGroup]="formSearchPatient" *ngIf="isCaseNumber == '1'">
                             <div class="row">
-                                <div class="col-12">
+                                <div class="col-6">
                                     <div class="form-group">
                                         <mat-form-field>
                                             <input matInput formControlName="caseNumber" autocomplete="off"
                                                 placeholder="חפש לפי מספר מקרה" name="fliterVal" />
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="form-group">
+                                        <mat-form-field>
+                                            <input matInput formControlName="personalPassport" autocomplete="off"
+                                                placeholder="חפש לפי תעודת זהות" name="fliterVal" />
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -22,9 +30,36 @@
                                 class="btn btn-primary btn-raised">
                                 <span class="material-icons">
                                     search
-                                    </span>
+                                </span>
                             </button>
                         </form>
+                        <form class="form" [formGroup]="formSearchEmployee" *ngIf="isCaseNumber == '0'">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="form-group">
+                                        <mat-form-field>
+                                            <input matInput formControlName="EmployeeName" autocomplete="off"
+                                                placeholder="חפש לפי שם עובד" name="fliterVal" />
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="form-group">
+                                        <mat-form-field>
+                                            <input matInput formControlName="EmployeeDepartment" autocomplete="off"
+                                                placeholder="חפש לפי מחלקה" name="fliterVal" />
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+                            </div>
+                            <button mat-raised-button type="submit" (click)="searchForm()"
+                                class="btn btn-primary btn-raised">
+                                <span class="material-icons">
+                                    search
+                                </span>
+                            </button>
+                        </form>
+                        <p *ngIf="isCaseNumber == '3'">לא נמצאו רשומות עבור טופס זה</p>
                     </div>
                 </div>
             </div>
@@ -42,7 +77,7 @@
 
             <ng-container matColumnDef="PatientName">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם נבדק
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם  
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.PatientName}}
                 </mat-cell>
@@ -50,7 +85,7 @@
 
             <ng-container matColumnDef="PersonalID">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תעודת זהות
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> סוג  
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.PatientPassport}}
                 </mat-cell>
@@ -58,7 +93,7 @@
 
             <ng-container matColumnDef="PatientDate">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך לידה
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך מילוי
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.PatientBirthday}}
                 </mat-cell>
@@ -66,11 +101,13 @@
 
             <ng-container matColumnDef="Print">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> הדפסת שאלון
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> הדפסת טופס
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                         color="primary" (click)="printRowForm(element)">
-                        <mat-icon>print</mat-icon>
+                        <span class="material-icons">
+                            zoom_out_map
+                        </span>
                     </button> </mat-cell>
             </ng-container>
 
@@ -149,8 +186,13 @@
                         </p>
                     </div>
                 </div>
+                <div class="full-width mb-2">
+                    <div class="row">חתימה</div>
+                    <img [src]="rowFormData.Signature">
+                </div>
             </form>
         </div>
+        
         <div class="card-footer"></div>
         <div class="pos-botom-fixed">
             <img class="full-width" src="assets/images/covid_footer.png" />
